# ProjetoFinalTP2

./: .dockerignore  .gitignore  Dockerfile  Doxyfile  LEIAME.TXT  Makefile  README.md  RELATORIO-Anabel-Mendes.TXT  RELATORIO-Dionilton-Oliveira-Silva.TXT  RELATORIO-Gabriel-Balder.TXT  RELATORIO-Gabriel-Campello.TXT  RELATORIO-Gabriel-Dylan.TXT  RELATORIO-Jhonny-Rodrigues-de-Sousa.TXT  RELATORIO-Luiz-Otavio.TXT  docker-compose.yml  pyproject.toml  run.py
app/application/: cart_service.py  pending_purchase_service.py  product_price_service.py  product_service.py  product_suggestion_service.py  shopping_list_service.py  store_service.py  user_service.py
app/domain/: exceptions.py  pending_purchase_item.py  product.py  product_price.py  product_suggestion.py  quantity.py  shopping_list.py  store.py  user.py
app/infrastructure/: demo_seed.py  pending_purchase_repository.py  product_price_repository.py  product_repository.py  product_suggestion_repository.py  store_repository.py
app/web/: app.py  cart_routes.py  dependencies.py  html_routes.py  pending_purchase_routes.py  product_suggestion_routes.py  routes.py  serializers.py  store_routes.py
docs/doxygen/: backend.md  frontend.md  mainpage.md
docs_entrega_tp2/: 00_visao_geral_do_sistema.md  04_matriz_rastreabilidade_geral.md  06_relatorio_final_para_entrega.md  grupo_2_catalogo_admin_estoque.md  grupo_3_listas_carrinho_precos.md
tests/integration/: test_admin_metrics_repository.py  test_admin_metrics_routes.py  test_cart_routes.py  test_demo_seed.py  test_html_routes.py  test_mvp_html_routes.py  (+9 more)
(+18 files in other folders)
