[project]
name = "projeto-final-tp2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Flask>=3.0,<4.0",
    "geopy>=2.4,<3.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0,<8.0",
    "ruff>=0.9,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
